plugins {
    id 'java'
}

version '1.0-SNAPSHOT'

sourceCompatibility = 11
targetCompatibility = 11

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
        }
    }
    test {
        java {
            srcDir 'src/org.test/java'
        }
        resources {
            srcDir 'src/org.test/resources'
        }
    }
}

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'org.org.test.Application',
                /*'Class-Path': './',*/
        )
    }
}

task fatJar(type: Jar) {
    manifest.from jar.manifest
    archiveClassifier = 'all'
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    with jar
}

dependencies {
    compile group: 'org.reflections', name: 'reflections', version: '0.9.12'
    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.2.3'
    compile group: 'ch.qos.logback', name:'logback-core', version: '1.2.3'
}
